bootstrapping, mc, and td learning

--- a/2022-10-21t17-13-39z.md
+++ b/2022-10-21t17-13-39z.md
@@ -1,6 +1,6 @@
 ---
 date: 2022-10-21 17:13:39
-title: Dynamic Programming and Bootstrapping in RL
+title: Dynamic Programming in RL
 id: 2022-10-21t17-13-39z
 tags: [uva, uva_rl]
 ---
@@ -10,8 +10,6 @@ known, we can apply a series of methods from the area of _dynamic programming_
 to find optimal policies for the MDP.
 
 Dynamic programming generally refers to the idea of simplifying a complex
-problem into many sub-problems and solving these recursively. Central to this is
-the idea of _bootstrapping_, that is using previous estimates to make new
-estimates. Bootstrapping is not limited to the dynamic programming context, and
-is used in many other approaches to
-[Reinforcement learning](./2022-10-20t15-15-55z.md).
+problem into many sub-problems and solving these recursively. In this case using
+dynamics-informed [bootstrapping](./2022-10-22t10-56-02z.md) to compute
+estimates based on previous estimates.
