--- a/2022-10-21t10-39-23z.md
+++ b/2022-10-21t10-39-23z.md
@@ -1,6 +1,6 @@
 ---
 date: 2022-10-21 10:39:23
-title: Epsilon-greedy Action Selection
+title: ε-greedy Action Selection
 id: 2022-10-21t10-39-23z
 tags: [uva, uva_rl]
 ---
