--- a/2022-10-21t11-48-49z.md
+++ b/2022-10-21t11-48-49z.md
@@ -7,10 +7,10 @@ tags: [uva, uva_rl]
 
 For addressing the [explore / exploit dilemma](./2022-10-21t11-48-49z.md) in
 [RL](./2022-10-20t15-15-55z.md), we can use the _Upper-Confidence Bound_ (UCB)
-as an alternative to [epsilon-greedy](./2022-10-21t10-39-23z.md) action
+as an alternative to [ε-greedy](./2022-10-21t10-39-23z.md) action
 selection.
 
-The intuition behind UCB is that in epsilon-greedy action selection, when
+The intuition behind UCB is that in ε-greedy action selection, when
 exploring, we do not make an informed choice about which actions to choose,
 instead choosing randomly. It would perhaps be better to explore actions that
 have a higher chance to be optimal.
