add further advantages to td learning

--- a/2022-10-22t10-55-03z.md
+++ b/2022-10-22t10-55-03z.md
@@ -15,3 +15,8 @@ not require knowledge of the [MDP](./2022-10-21t12-12-18z.md) dynamics,
 similarly to [Monte Carlo methods](./2022-10-22t10-38-24z.md). Unlike MC
 methods, TD methods make updates at a step level rather than at an episode
 level.
+
+Unlike MC, this allows us to address
+[continuing tasks](./2022-10-21t11-26-04z.md) and not have to wait until the end
+of an episode. Furthermore, it allows us to exploit the _structure_ of the value
+function, i.e. the consistency between nearby steps.
