temporal difference methods

--- a/2022-10-22t10-55-03z.md
+++ b/2022-10-22t10-55-03z.md
@@ -20,3 +20,5 @@ Unlike MC, this allows us to address
 [continuing tasks](./2022-10-21t11-26-04z.md) and not have to wait until the end
 of an episode. Furthermore, it allows us to exploit the _structure_ of the value
 function, i.e. the consistency between nearby steps.
+
+TD methods are biased, unlike MC.
