fix wording in MDP; add notes on MARL

--- a/2022-10-21t12-12-18z.md
+++ b/2022-10-21t12-12-18z.md
@@ -32,12 +32,12 @@ discrete [probability distributions](./2021-09-10t19-20-02z), depending _only_
 on the previous state and action:
 
 $$
-p(s', r | s, a) \dot{=} \text{Pr} \left{S_t = s', R_t = r | S_{t-1} = s, A_{t-1} = a\right}.
+p(s', r | s, a) \dot{=} \text{Pr} \left\{S_t = s', R_t = r | S_{t-1} = s, A_{t-1} = a\right\}.
 $$
 
 This probability distribution defines the _dynamics_ of the MDP. This
 restriction on the state, that it must include all the information necessary to
-predict the next state, is what makes the MDP a _Markov_. It is the _Markov_
+predict the next state, is what makes the MDP _Markov_. It is the _Markov_
 property of the states in an MDP.
 
 This Markov property is the same assumption that defines a
