--- a/2022-10-22t21-42-07z.md
+++ b/2022-10-22t21-42-07z.md
@@ -192,3 +192,51 @@ properties:
 Two features of histories are considered to be equivalent if they predict the
 same future. We have also have the notion of a _markov state_ and _internal
 state_ (aka _belief state_).
+
+## Multi-Agent RL
+
+Multi-agent RL (MARL) is the study of RL problems considering more than one
+agent simultaneously interacting with the same environment and potentially with
+each other.
+
+MARL faces several of the same challenges as normal RL, but often to a higher
+degree. Some of the challenges faces are instead unique to MARL.
+
+- The curse of dimensionality: more agents -> more dimensions.
+- Local optima: more agents -> more local optima to get stuck in.
+- Non-stationarity: even in stationary environments, the policies of other
+  agents may change, ultimately causing dynamics to look non-stationary from the
+  perspective of a given agent.
+- credit assignment: in a multi-agent environment, it is not always clear which
+  agent is responsible for a given outcome.
+
+MARL often relies on the field of _Game Theory_ to help with addressing the
+challenges. Game Theory studies the interactions of "rational" agents with
+potentially conflicting goals.
+
+MARL typically deals with two types of games from game thoery:
+
+- Fully cooperative games
+  - An agent has imperfect information, so we formalise using Decentralised
+    POMDPs.
+  - in general, it is difficult to select an appropriate nash equilibrium
+- Two-player zero sum
+  - Here, max-min strategy is the preferred solution typically: strategy that
+    maximizes worst-case payoff.
+  - may need a mixed strategy
+
+MARL has also been approached using Deep Learning, in what is known as Deep MARL
+(DMARL). Here often we have "independent learning", where we run a separate RL
+algorithm for each agent. If the agents are all identical, we can share
+parameters.
+
+Note that while in deployment the policies are executed in a decentralised way,
+during training, the process can be centralised. One way of doing this is with a
+_centralised critic_. This is a critic, in the actor-critic sense, i.e. a value
+function, that is shared by all agents. This helps with non-stationarity, but is
+generally quite complex and difficult to learn.
+
+Finally, how do we evaluate MARL? One way, for zero-sum games, is to generate
+Joint Policy Correlation (JPC) matrices. Here we train policies with several
+different random seeds and then pair policies with different seeds to see if any
+overfitting to specific partners/opponents occurs.
