git subrepo pull literature-notes
subrepo:
  subdir:   "literature-notes"
  merged:   "c5559ea"
upstream:
  origin:   "git@github.com:thesofakillers/literature-notes.git"
  branch:   "master"
  commit:   "c5559ea"
git-subrepo:
  version:  "0.4.3"
  origin:   "???"
  commit:   "???"

--- a/literature-notes/references.bib
+++ b/literature-notes/references.bib
@@ -1,4 +1,3 @@
-
 @inproceedings{abadi_deep_2016,
   title = {Deep {{Learning}} with {{Differential Privacy}}},
   booktitle = {Proceedings of the 2016 {{ACM SIGSAC Conference}} on {{Computer}} and {{Communications Security}}},
@@ -537,7 +536,7 @@
   eprinttype = {arxiv},
   primaryclass = {cs},
   archiveprefix = {arXiv},
-  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,T0}
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,notion,T0}
 }
 
 @article{sarazin_eso_1990,
@@ -655,5 +654,4 @@
   issn = {0001-0782},
   doi = {10.1145/3446776}
 }
-
 
