--- a/2022-03-26t12-41-05z.md
+++ b/2022-03-26t12-41-05z.md
@@ -5,7 +5,7 @@ id: 2022-03-26t12-41-05z
 tags: [uva, uva_ir1]
 ---
 
-In [information retrieval](./2022-03-26t12-31-28z.md) is a data-structure
+In [information retrieval](./2022-03-26t12-31-28z.md), the inverted index is a data-structure
 consisting in a hash-map which maps each term in our document collection a set
 of data for each of the documents in which the term appears. The data to which
 each term is mapped consists in "inverted lists", listing for example
