git subrepo pull literature-notes
subrepo:
  subdir:   "literature-notes"
  merged:   "56e0b62"
upstream:
  origin:   "git@github.com:thesofakillers/literature-notes.git"
  branch:   "master"
  commit:   "56e0b62"
git-subrepo:
  version:  "0.4.3"
  origin:   "???"
  commit:   "???"

--- a/literature-notes/references.bib
+++ b/literature-notes/references.bib
@@ -9,6 +9,7 @@
   publisher = {{Association for Computing Machinery}},
   address = {{New York, NY, USA}},
   doi = {10.1145/2976749.2978318},
+  urldate = {2022-07-04},
   isbn = {978-1-4503-4139-4},
   keywords = {deep learning,differential privacy}
 }
@@ -20,9 +21,9 @@
   month = dec,
   journal = {arXiv:1912.12132 [cs, stat]},
   eprint = {1912.12132},
-  eprinttype = {arxiv},
   primaryclass = {cs, stat},
-  archiveprefix = {arXiv},
+  urldate = {2020-08-27},
+  archiveprefix = {arxiv},
   keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Statistics - Machine Learning}
 }
 
@@ -48,7 +49,8 @@
   pages = {1889--1904},
   publisher = {{Association for Computational Linguistics}},
   address = {{Online}},
-  doi = {10.18653/v1/2021.acl-long.148}
+  doi = {10.18653/v1/2021.acl-long.148},
+  urldate = {2022-01-04}
 }
 
 @article{bach_promptsource_2022,
@@ -59,9 +61,9 @@
   month = mar,
   journal = {arXiv:2202.01279 [cs]},
   eprint = {2202.01279},
-  eprinttype = {arxiv},
   primaryclass = {cs},
-  archiveprefix = {arXiv},
+  urldate = {2022-04-07},
+  archiveprefix = {arxiv},
   keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,PromptSource paper}
 }
 
@@ -73,9 +75,9 @@
   month = may,
   journal = {arXiv:1409.0473 [cs, stat]},
   eprint = {1409.0473},
-  eprinttype = {arxiv},
   primaryclass = {cs, stat},
-  archiveprefix = {arXiv},
+  urldate = {2021-05-05},
+  archiveprefix = {arxiv},
   keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing,Statistics - Machine Learning}
 }
 
@@ -88,13 +90,15 @@
   pages = {238--247},
   publisher = {{Association for Computational Linguistics}},
   address = {{Baltimore, Maryland}},
-  doi = {10.3115/v1/P14-1023}
+  doi = {10.3115/v1/P14-1023},
+  urldate = {2021-11-17}
 }
 
 @misc{becker_kalman_2018,
   title = {Kalman {{Filter Tutorial}}},
   author = {Becker, Alex},
   year = {2018},
+  urldate = {2020-11-10},
   howpublished = {https://www.kalmanfilter.net/},
   langid = {english}
 }
@@ -106,6 +110,7 @@
   year = {2018},
   month = sep,
   journal = {Uber Engineering Blog},
+  urldate = {2020-09-22},
   howpublished = {https://eng.uber.com/forecasting-introduction/},
   langid = {american}
 }
@@ -118,10 +123,10 @@
   month = jul,
   journal = {arXiv:2005.14165 [cs]},
   eprint = {2005.14165},
-  eprinttype = {arxiv},
   primaryclass = {cs},
-  archiveprefix = {arXiv},
-  keywords = {Computer Science - Computation and Language,gpt,gpt-3,gpt3}
+  urldate = {2020-09-06},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Computation and Language,gpt,gpt-3,gpt3,notion}
 }
 
 @article{cerqueira_evaluating_2020,
@@ -134,11 +139,11 @@
   volume = {109},
   number = {11},
   eprint = {1905.11744},
-  eprinttype = {arxiv},
   pages = {1997--2028},
   issn = {0885-6125, 1573-0565},
   doi = {10.1007/s10994-020-05910-7},
-  archiveprefix = {arXiv},
+  urldate = {2021-07-13},
+  archiveprefix = {arxiv},
   keywords = {Computer Science - Machine Learning,Statistics - Machine Learning}
 }
 
@@ -149,6 +154,7 @@
   author = {Chandorkar, Mandar and Furtlehner, Cyril and Poduval, Bala and Camporeale, Enrico and Sebag, Michele},
   year = {2019},
   month = sep,
+  urldate = {2021-01-18},
   langid = {english}
 }
 
@@ -162,7 +168,8 @@
   pages = {4171--4186},
   publisher = {{Association for Computational Linguistics}},
   address = {{Minneapolis, Minnesota}},
-  doi = {10.18653/v1/N19-1423}
+  doi = {10.18653/v1/N19-1423},
+  urldate = {2022-04-19}
 }
 
 @article{fried_statistics_1965,
@@ -176,6 +183,7 @@
   pages = {1427--1435},
   publisher = {{Optical Society of America}},
   doi = {10.1364/JOSA.55.001427},
+  urldate = {2020-11-17},
   copyright = {\&\#169; 1965 Optical Society of America},
   langid = {english},
   keywords = {Atmospheric turbulence,Inhomogeneous optical media,Optical systems,Wave propagation,Wavefront distortions,Wavefronts}
@@ -192,7 +200,8 @@
   number = {10},
   pages = {2451--2471},
   issn = {0899-7667},
-  doi = {10.1162/089976600300015015}
+  doi = {10.1162/089976600300015015},
+  urldate = {2021-04-22}
 }
 
 @techreport{goldman_basics_2018,
@@ -203,6 +212,7 @@
   journal = {OSF Preprints},
   number = {u2csn},
   institution = {{Center for Open Science}},
+  urldate = {2020-09-10},
   langid = {english}
 }
 
@@ -212,6 +222,7 @@
   year = {2020},
   month = jan,
   journal = {Medium},
+  urldate = {2020-07-31},
   howpublished = {https://medium.com/@zach.gollwitzer/imperative-vs-declarative-programming-procedural-functional-and-oop-b03a53ba745c},
   langid = {english}
 }
@@ -222,12 +233,14 @@
   year = {2009},
   month = feb,
   journal = {Paul Graham},
+  urldate = {2020-07-31},
   howpublished = {http://www.paulgraham.com/identity.html}
 }
 
 @misc{graham_schlep_nodate,
   title = {Schlep {{Blindness}}},
   author = {Graham, Paul},
+  urldate = {2020-12-04},
   howpublished = {http://www.paulgraham.com/schlep.html}
 }
 
@@ -238,10 +251,13 @@
   journal = {Econometrica},
   volume = {37},
   number = {3},
+  eprint = {1912791},
+  eprinttype = {jstor},
   pages = {424--438},
   publisher = {{[Wiley, Econometric Society]}},
   issn = {0012-9682},
-  doi = {10.2307/1912791}
+  doi = {10.2307/1912791},
+  urldate = {2021-01-19}
 }
 
 @inproceedings{grover_deep_2015,
@@ -255,6 +271,7 @@
   publisher = {{Association for Computing Machinery}},
   address = {{New York, NY, USA}},
   doi = {10.1145/2783258.2783275},
+  urldate = {2020-09-09},
   isbn = {978-1-4503-3664-2},
   keywords = {deep learning,gaussian processes,graphical models,machine learning,weather forecasting}
 }
@@ -269,7 +286,8 @@
   volume = {9909},
   pages = {99090H},
   publisher = {{International Society for Optics and Photonics}},
-  doi = {10.1117/12.2232012}
+  doi = {10.1117/12.2232012},
+  urldate = {2020-08-30}
 }
 
 @article{hagelin_optical_2010,
@@ -287,6 +305,7 @@
   author = {Hamberg, Erlend},
   year = {2010},
   month = aug,
+  urldate = {2020-08-02},
   howpublished = {https://hamberg.no/gtd/}
 }
 
@@ -314,12 +333,14 @@
   pages = {1735--1780},
   publisher = {{MIT Press}},
   issn = {0899-7667},
-  doi = {10.1162/neco.1997.9.8.1735}
+  doi = {10.1162/neco.1997.9.8.1735},
+  urldate = {2020-06-22}
 }
 
 @misc{informationesoorg_active_nodate,
   title = {Active {{Optics}}},
   author = {{information@eso.org}},
+  urldate = {2020-09-02},
   howpublished = {https://www.eso.org/public/teles-instr/technology/active\_optics/},
   langid = {english}
 }
@@ -327,6 +348,7 @@
 @misc{informationesoorg_adaptive_nodate,
   title = {Adaptive {{Optics}}},
   author = {{information@eso.org}},
+  urldate = {2020-09-02},
   howpublished = {https://www.eso.org/public/teles-instr/technology/adaptive\_optics/},
   langid = {english}
 }
@@ -339,9 +361,9 @@
   month = mar,
   journal = {arXiv:1810.07951 [cs]},
   eprint = {1810.07951},
-  eprinttype = {arxiv},
   primaryclass = {cs},
-  archiveprefix = {arXiv},
+  urldate = {2020-10-13},
+  archiveprefix = {arxiv},
   keywords = {Computer Science - Programming Languages}
 }
 
@@ -350,6 +372,7 @@
   author = {Innes, Mark},
   year = {2019},
   month = jul,
+  urldate = {2020-09-21},
   howpublished = {https://fluxml.ai/2019/02/07/what-is-differentiable-programming.html}
 }
 
@@ -368,6 +391,7 @@
   title = {How to {{Get Rich}} by {{Naval Ravikant}} ({{Detailed Summary}} + {{Infographic}}) | {{Sloww}}},
   author = {Kowalksi, Kyle},
   year = {2020},
+  urldate = {2021-01-19},
   howpublished = {https://www.sloww.co/how-to-get-rich-naval-ravikant/}
 }
 
@@ -381,6 +405,7 @@
   publisher = {{Association for Computational Linguistics}},
   address = {{Online and Punta Cana, Dominican Republic}},
   doi = {10.18653/v1/2021.emnlp-main.243},
+  urldate = {2022-04-28},
   keywords = {T5+LM paper}
 }
 
@@ -393,6 +418,7 @@
   pages = {3150--3158},
   publisher = {{PMLR}},
   issn = {2640-3498},
+  urldate = {2022-01-11},
   langid = {english}
 }
 
@@ -403,9 +429,9 @@
   month = dec,
   journal = {arXiv:1912.02276 [cs, stat]},
   eprint = {1912.02276},
-  eprinttype = {arxiv},
   primaryclass = {cs, stat},
-  archiveprefix = {arXiv},
+  urldate = {2020-09-09},
+  archiveprefix = {arxiv},
   keywords = {Computer Science - Machine Learning,Statistics - Machine Learning}
 }
 
@@ -416,9 +442,9 @@
   month = oct,
   journal = {arXiv:1910.13767 [astro-ph, physics:physics]},
   eprint = {1910.13767},
-  eprinttype = {arxiv},
   primaryclass = {astro-ph, physics:physics},
-  archiveprefix = {arXiv},
+  urldate = {2020-06-17},
+  archiveprefix = {arxiv},
   keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,Physics - Atmospheric and Oceanic Physics}
 }
 
@@ -427,7 +453,8 @@
   author = {Muller, Derek},
   year = {2020},
   month = aug,
-  publisher = {{Veritasium}}
+  publisher = {{Veritasium}},
+  urldate = {2020-08-28}
 }
 
 @article{noauthor_jet_2020,
@@ -435,12 +462,14 @@
   year = {2020},
   month = aug,
   journal = {Wikipedia},
+  urldate = {2020-09-01},
   copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english}
 }
 
 @misc{noauthor_what_nodate-1,
   title = {What {{Is}} the {{Jet Stream}}? | {{NOAA SciJinks}} \textendash{} {{All About Weather}}},
+  urldate = {2020-09-01},
   howpublished = {https://scijinks.gov/jet-stream/}
 }
 
@@ -454,6 +483,7 @@
   publisher = {{Nature Publishing Group}},
   issn = {2522-5839},
   doi = {10.1038/s42256-020-00272-0},
+  urldate = {2021-01-11},
   copyright = {2021 The Author(s), under exclusive licence to Springer Nature Limited},
   langid = {english}
 }
@@ -470,6 +500,7 @@
   publisher = {{Oxford Academic}},
   issn = {0035-8711},
   doi = {10.1093/mnras/stv1400},
+  urldate = {2020-09-03},
   langid = {english}
 }
 
@@ -481,6 +512,7 @@
   journal = {The Messenger},
   volume = {53},
   pages = {8--9},
+  urldate = {2020-08-30},
   keywords = {Auxiliary Instrumentation:Seeing,Methods of Observation:Seeing,Seeing:Auxiliary Instrumentation,Seeing:Methods of Observation}
 }
 
@@ -488,6 +520,7 @@
   title = {Structured {{Procrastination}}},
   author = {Perry, John},
   year = {2006},
+  urldate = {2021-04-03},
   howpublished = {http://www.structuredprocrastination.com/}
 }
 
@@ -507,6 +540,7 @@
   number = {140},
   pages = {1--67},
   issn = {1533-7928},
+  urldate = {2022-04-11},
   keywords = {T5}
 }
 
@@ -522,6 +556,7 @@
   publisher = {{Association for Computing Machinery}},
   address = {{New York, NY, USA}},
   doi = {10.1145/2939672.2939778},
+  urldate = {2022-01-13},
   isbn = {978-1-4503-4232-2},
   keywords = {black box classifier,explaining machine learning,interpretability,interpretable machine learning}
 }
@@ -533,10 +568,10 @@
   month = mar,
   journal = {arXiv:2110.08207 [cs]},
   eprint = {2110.08207},
-  eprinttype = {arxiv},
   primaryclass = {cs},
-  archiveprefix = {arXiv},
-  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,notion,T0}
+  urldate = {2022-04-07},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,notion,read,T0}
 }
 
 @article{sarazin_eso_1990,
@@ -548,6 +583,7 @@
   volume = {227},
   pages = {294--300},
   issn = {0004-6361},
+  urldate = {2020-09-03},
   keywords = {Earth Atmosphere,Error Analysis,Image Motion Compensation,Optical Properties,Performance Tests,Perturbation Theory,Site Selection,Telescopes}
 }
 
@@ -558,6 +594,7 @@
   year = {2018},
   month = jun,
   journal = {Uber Engineering Blog},
+  urldate = {2020-09-22},
   howpublished = {https://eng.uber.com/m4-forecasting-competition/},
   langid = {american}
 }
@@ -568,6 +605,7 @@
   year = {2016},
   month = dec,
   journal = {Medium},
+  urldate = {2021-01-23},
   howpublished = {https://medium.com/@chrisspurvey/four-ways-to-reprogram-your-subconscious-mind-24581e111d3c},
   langid = {english}
 }
@@ -577,7 +615,8 @@
   booktitle = {Proceedings of the {{IEEE Conference}} on {{Computer Vision}} and {{Pattern Recognition}}},
   author = {Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
   year = {2015},
-  pages = {1--9}
+  pages = {1--9},
+  urldate = {2021-12-31}
 }
 
 @article{tokovinin_measuring_2002,
@@ -586,6 +625,7 @@
   year = {2002},
   volume = {266},
   pages = {104},
+  urldate = {2020-09-03},
   isbn = {9781583811061}
 }
 
@@ -597,9 +637,9 @@
   month = nov,
   journal = {arXiv:1711.02712 [cs, stat]},
   eprint = {1711.02712},
-  eprinttype = {arxiv},
   primaryclass = {cs, stat},
-  archiveprefix = {arXiv},
+  urldate = {2020-10-12},
+  archiveprefix = {arxiv},
   keywords = {Computer Science - Mathematical Software,Statistics - Machine Learning}
 }
 
@@ -611,10 +651,10 @@
   month = dec,
   journal = {arXiv:1706.03762 [cs]},
   eprint = {1706.03762},
-  eprinttype = {arxiv},
   primaryclass = {cs},
-  archiveprefix = {arXiv},
-  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning}
+  urldate = {2021-04-29},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,notion}
 }
 
 @book{yates_mind_2017,
@@ -636,9 +676,9 @@
   month = feb,
   journal = {arXiv:1611.03530 [cs]},
   eprint = {1611.03530},
-  eprinttype = {arxiv},
   primaryclass = {cs},
-  archiveprefix = {arXiv},
+  urldate = {2021-05-07},
+  archiveprefix = {arxiv},
   keywords = {Computer Science - Machine Learning}
 }
 
@@ -652,6 +692,6 @@
   number = {3},
   pages = {107--115},
   issn = {0001-0782},
-  doi = {10.1145/3446776}
+  doi = {10.1145/3446776},
+  urldate = {2021-05-07}
 }
-
