sequential decision making

--- a/2022-10-20t15-15-55z.md
+++ b/2022-10-20t15-15-55z.md
@@ -11,4 +11,4 @@ agents capable of sequentially interacting with an environment so to maximize
 some long-term objective.
 
 In doing so, RL hopes to understand and automate goal-directed learning and
-decision making.
+[decision making](./2023-04-11t15-08-41z.md).
