--- a/2022-10-21t12-12-18z.md
+++ b/2022-10-21t12-12-18z.md
@@ -6,8 +6,9 @@ tags: [uva, uva_rl]
 ---
 
 _Markov Decision Processes_ (MDP) is _the_ framework used for formalizing the
-problem of sequential decision making, typically studied in the field of
-[RL](./2022-10-20t15-15-55z.md). An MDP consists in the following elements:
+problem of [sequential decision making](./2023-04-11t15-08-41z.md), typically
+studied in the field of [RL](./2022-10-20t15-15-55z.md). An MDP consists in the
+following elements:
 
 - The _agent_: the entity that learns and makes decisions
 - The _environment_: the entity that the agent interacts with; everything other
