grounding in LISDM

--- a/2021-12-19t17-55-55z.md
+++ b/2021-12-19t17-55-55z.md
@@ -6,7 +6,8 @@ tags: [uva, uva_nlp1]
 ---
 
 Symbol grounding is the process of ensuring that our semantic representations
-are theoretically and cognitively valid.
+are theoretically and cognitively valid. That is, that the meanings (semantics)
+behind our words (symbols) are "grounded" in reality.
 
 This is a process that unimodal semantic models, such as language-only models
 from [NLP](./2021-12-20t10-52-27z.md) struggle with.
