grounding in lisdm and multi modal encoders

--- a/2023-04-17t11-15-58z.md
+++ b/2023-04-17t11-15-58z.md
@@ -13,7 +13,7 @@ modalities are similar may be enough.
 
 But why does the grounding problem need addressing? This is because to be able
 to use language to make decisions in a given environment, the meaning of the
-words needs to be properly tied to the environment. Otherwise, the language
+words needs to be properly tied to the environment[^1]. Otherwise, the language
 vectors may as well simply be random vectors.
 
 For instance, if we are trying to use language to make decisions in a
@@ -21,3 +21,9 @@ restaurant, we need to ensure that the vector for the word "apple" is similar to
 the vector of an apple in the restaurant. This is because we want to be able to
 use the word "apple" to refer to the apple in the restaurant, and not to some
 other apple in some other restaurant.
+
+So, [how do we address grounding in LISDM?](./2023-04-17t15-31-08z.md)
+
+[^1]:
+    why just the environment? Do we have action representations too? If so this
+    is a third semantic space that needs grounding and may be leveraged.
