git subrepo pull literature-notes
subrepo:
  subdir:   "literature-notes"
  merged:   "190f356"
upstream:
  origin:   "git@github.com:thesofakillers/literature-notes.git"
  branch:   "master"
  commit:   "190f356"
git-subrepo:
  version:  "0.4.3"
  origin:   "???"
  commit:   "???"

--- a/literature-notes/references.bib
+++ b/literature-notes/references.bib
@@ -172,6 +172,17 @@
   urldate = {2022-04-19}
 }
 
+@inproceedings{dosovitskiy_image_2022,
+  title = {An {{Image}} Is {{Worth}} 16x16 {{Words}}: {{Transformers}} for {{Image Recognition}} at {{Scale}}},
+  shorttitle = {An {{Image}} Is {{Worth}} 16x16 {{Words}}},
+  booktitle = {International {{Conference}} on {{Learning Representations}}},
+  author = {Dosovitskiy, Alexey and Beyer, Lucas and Kolesnikov, Alexander and Weissenborn, Dirk and Zhai, Xiaohua and Unterthiner, Thomas and Dehghani, Mostafa and Minderer, Matthias and Heigold, Georg and Gelly, Sylvain and Uszkoreit, Jakob and Houlsby, Neil},
+  year = {2022},
+  month = mar,
+  urldate = {2022-11-09},
+  langid = {english}
+}
+
 @article{fried_statistics_1965,
   title = {Statistics of a {{Geometric Representation}} of {{Wavefront Distortion}}},
   author = {Fried, D. L.},
@@ -187,6 +198,15 @@
   copyright = {\&\#169; 1965 Optical Society of America},
   langid = {english},
   keywords = {Atmospheric turbulence,Inhomogeneous optical media,Optical systems,Wave propagation,Wavefront distortions,Wavefronts}
+}
+
+@article{geng_multimodal_2023,
+  title = {Multimodal {{Masked Autoencoders Learn Transferable Representations}}},
+  author = {Geng, Xinyang and Liu, Hao and Lee, Lisa and Schuurmans, Dale and Levine, Sergey and Abbeel, Pieter},
+  year = {2023},
+  month = feb,
+  urldate = {2023-04-17},
+  langid = {english}
 }
 
 @article{gers_learning_2000,
@@ -309,6 +329,18 @@
   howpublished = {https://hamberg.no/gtd/}
 }
 
+@inproceedings{he_deep_2016,
+  title = {Deep {{Residual Learning}} for {{Image Recognition}}},
+  booktitle = {2016 {{IEEE Conference}} on {{Computer Vision}} and {{Pattern Recognition}} ({{CVPR}})},
+  author = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  year = {2016},
+  month = jun,
+  pages = {770--778},
+  issn = {1063-6919},
+  doi = {10.1109/CVPR.2016.90},
+  keywords = {Complexity theory,Degradation,Image recognition,Image segmentation,Neural networks,Training,Visualization}
+}
+
 @book{herbert_dune_2005,
   title = {Dune (40th {{Anniversary Edition}})},
   author = {Herbert, Frank},
@@ -374,6 +406,20 @@
   month = jul,
   urldate = {2020-09-21},
   howpublished = {https://fluxml.ai/2019/02/07/what-is-differentiable-programming.html}
+}
+
+@inproceedings{jia_scaling_2021,
+  title = {Scaling {{Up Visual}} and {{Vision-Language Representation Learning With Noisy Text Supervision}}},
+  booktitle = {Proceedings of the 38th {{International Conference}} on {{Machine Learning}}},
+  author = {Jia, Chao and Yang, Yinfei and Xia, Ye and Chen, Yi-Ting and Parekh, Zarana and Pham, Hieu and Le, Quoc and Sung, Yun-Hsuan and Li, Zhen and Duerig, Tom},
+  year = {2021},
+  month = jul,
+  pages = {4904--4916},
+  publisher = {{PMLR}},
+  issn = {2640-3498},
+  urldate = {2023-04-17},
+  langid = {english},
+  keywords = {ALIGN}
 }
 
 @inproceedings{kapoor_airplanes_2014,
@@ -531,6 +577,20 @@
   keywords = {gpt,gpt-2,gpt2}
 }
 
+@inproceedings{radford_learning_2021,
+  title = {Learning {{Transferable Visual Models From Natural Language Supervision}}},
+  booktitle = {Proceedings of the 38th {{International Conference}} on {{Machine Learning}}},
+  author = {Radford, Alec and Kim, Jong Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and Sastry, Girish and Askell, Amanda and Mishkin, Pamela and Clark, Jack and Krueger, Gretchen and Sutskever, Ilya},
+  year = {2021},
+  month = jul,
+  pages = {8748--8763},
+  publisher = {{PMLR}},
+  issn = {2640-3498},
+  urldate = {2023-02-07},
+  langid = {english},
+  keywords = {CLIP,notion,read}
+}
+
 @article{raffel_exploring_2020,
   title = {Exploring the {{Limits}} of {{Transfer Learning}} with a {{Unified Text-to-Text Transformer}}},
   author = {Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J.},
@@ -585,6 +645,20 @@
   issn = {0004-6361},
   urldate = {2020-09-03},
   keywords = {Earth Atmosphere,Error Analysis,Image Motion Compensation,Optical Properties,Performance Tests,Perturbation Theory,Site Selection,Telescopes}
+}
+
+@article{singh_flava_2022,
+  title = {{{FLAVA}}: {{A Foundational Language And Vision Alignment Model}}},
+  shorttitle = {{{FLAVA}}},
+  author = {Singh, Amanpreet and Hu, Ronghang and Goswami, Vedanuj and Couairon, Guillaume and Galuba, Wojciech and Rohrbach, Marcus and Kiela, Douwe},
+  year = {2022},
+  month = mar,
+  journal = {arXiv:2112.04482 [cs]},
+  eprint = {2112.04482},
+  primaryclass = {cs},
+  urldate = {2022-04-05},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Computation and Language,Computer Science - Computer Vision and Pattern Recognition}
 }
 
 @misc{smyl_m4_2018,
@@ -657,6 +731,34 @@
   keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,notion}
 }
 
+@misc{wang_image_2022,
+  title = {Image as a {{Foreign Language}}: {{BEiT Pretraining}} for {{All Vision}} and {{Vision-Language Tasks}}},
+  shorttitle = {Image as a {{Foreign Language}}},
+  author = {Wang, Wenhui and Bao, Hangbo and Dong, Li and Bjorck, Johan and Peng, Zhiliang and Liu, Qiang and Aggarwal, Kriti and Mohammed, Owais Khan and Singhal, Saksham and Som, Subhojit and Wei, Furu},
+  year = {2022},
+  month = aug,
+  number = {arXiv:2208.10442},
+  eprint = {2208.10442},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2208.10442},
+  urldate = {2023-04-17},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Computation and Language,Computer Science - Computer Vision and Pattern Recognition}
+}
+
+@inproceedings{watkins_teachable_2021,
+  title = {Teachable {{Reinforcement Learning}} via {{Advice Distillation}}},
+  booktitle = {Advances in {{Neural Information Processing Systems}}},
+  author = {Watkins, Olivia and Gupta, Abhishek and Darrell, Trevor and Abbeel, Pieter and Andreas, Jacob},
+  year = {2021},
+  volume = {34},
+  pages = {6920--6933},
+  publisher = {{Curran Associates, Inc.}},
+  urldate = {2022-11-02},
+  keywords = {notion,read}
+}
+
 @book{yates_mind_2017,
   title = {The {{Mind Illuminated}}: {{A Complete Meditation Guide Integrating Buddhist Wisdom}} and {{Brain Science}} for {{Greater Mindfulness}}},
   shorttitle = {The {{Mind Illuminated}}},
@@ -667,6 +769,18 @@
   address = {{New York ; London ; Toronto ; Sydney ; New Delhi}},
   isbn = {978-1-5011-5698-4},
   langid = {english}
+}
+
+@inproceedings{zhang_glipv2_2022,
+  title = {{{GLIPv2}}: {{Unifying Localization}} and {{Vision-Language Understanding}}},
+  shorttitle = {{{GLIPv2}}},
+  booktitle = {Advances in {{Neural Information Processing Systems}}},
+  author = {Zhang, Haotian and Zhang, Pengchuan and Hu, Xiaowei and Chen, Yen-Chun and Li, Liunian Harold and Dai, Xiyang and Wang, Lijuan and Yuan, Lu and Hwang, Jenq-Neng and Gao, Jianfeng},
+  year = {2022},
+  month = oct,
+  urldate = {2023-02-19},
+  langid = {english},
+  keywords = {notion,skimmed,to read}
 }
 
 @article{zhang_understanding_2017,
