more general phrasing in index zettel

--- a/2020-07-21t11-29-02z.md
+++ b/2020-07-21t11-29-02z.md
@@ -21,5 +21,5 @@ notes.
 - [Finance](./2021-05-05t10-22-45z.md)(ew)
 
 Note, these are loose categorizations of note entry-points. Once a topic is
-found, the network visualization below, links in the text and backlinks on the
-side are probably a better way for navigating the knowledge base.
+found, a network visualization, links in the text, backlinks and search are
+probably a better way for navigating the knowledge base.
