zettel for my thesis and for goal misgeneralization

--- a/2020-07-21t11-29-02z.md
+++ b/2020-07-21t11-29-02z.md
@@ -15,6 +15,7 @@ notes.
 - [Computer Science](./2020-10-14t15-05-24z.md)
 - [Linguistics](./2021-12-20t10-50-39z.md)
 - [Miscellaneous Notes](./2020-08-30t15-47-14z.md)
+- [Notes from my Master's thesis](./2023-07-10t14-32-02z.md)
 - [Statistics](./2020-09-14t14-24-41z.md)
 - [The Zettelkasten Method](./2020-08-24t15-19-14z.md)
 - [Startups](./2020-10-03t22-56-43z.md)
