--- a/2023-04-11t15-01-36z.md
+++ b/2023-04-11t15-01-36z.md
@@ -2,10 +2,12 @@
 date: 2023-04-11 15:01:36
 title: Language-informed Sequential Decision Making
 id: 2023-04-11t15-01-36z
+tags: [msc_thesis]
 ---
 
-Language-informed sequential decision making (LISDM) is part of what my MSc
-thesis in [AI](./2020-09-04t14-39-00z.md) examines. LISDM is concerned with the
+Language-informed [sequential decision making](./2023-04-11t15-08-41z.md)
+(LISDM) is part of what my [MSc thesis](./2023-07-10t14-32-02z.md) in
+[AI](./2020-09-04t14-39-00z.md) examines. LISDM is concerned with the
 development of algorithms that can leverage natural language inputs
 (instructions, descriptions, constraints, etc.) to make sequential decisions in
 a given environment relevant to some end.
