--- a/2023-04-11t15-08-41z.md
+++ b/2023-04-11t15-08-41z.md
@@ -2,6 +2,7 @@
 date: 2023-04-11 15:08:41
 title: Sequential Decision Making
 id: 2023-04-11t15-08-41z
+tags: [msc_thesis]
 ---
 
 Sequential decision making is the field that studies the processes and
