--- a/2023-04-17t11-14-27z.md
+++ b/2023-04-17t11-14-27z.md
@@ -2,6 +2,7 @@
 date: 2023-04-17 11:14:27
 title: Small Survey on Vision-Language Encoders as of April 2023
 id: 2023-04-17t11-14-27z
+tags: [msc_thesis]
 ---
 
 CLIP [@radford_learning_2021] is the go-to model in the field as of today. More
