--- a/2023-04-17t11-15-58z.md
+++ b/2023-04-17t11-15-58z.md
@@ -2,6 +2,7 @@
 date: 2023-04-17 11:15:58
 title: LISDM requires (partially) solving the grounding problem
 id: 2023-04-17t11-15-58z
+tags: [msc_thesis]
 ---
 
 [Language-informed sequential decision making (LISDM)](./2023-04-11t15-01-36z.md)
