--- a/2023-04-17t15-31-08z.md
+++ b/2023-04-17t15-31-08z.md
@@ -2,6 +2,7 @@
 date: 2023-04-17 15:31:08
 title: Multi-modal approaches are the typical solution to grounding in LISDM
 id: 2023-04-17t15-31-08z
+tags: [msc_thesis]
 ---
 
 At least as of 2023, it seems that leveraging
