--- a/2023-04-17t11-31-04z.md
+++ b/2023-04-17t11-31-04z.md
@@ -2,6 +2,7 @@
 date: 2023-04-17 11:31:04
 title: The use of "grounding" in ML
 id: 2023-04-17t11-31-04z
+tags: [msc_thesis]
 ---
 
 While generally tied to the
