--- a/2023-04-17t15-46-34z.md
+++ b/2023-04-17t15-46-34z.md
@@ -2,6 +2,7 @@
 date: 2023-04-17 15:46:34
 title: Multi-modal Learning
 id: 2023-04-17t15-46-34z
+tags: [msc_thesis]
 ---
 
 Multi-modal learning is the area of
