update cclipt ablation experiment

--- a/2023-07-11t12-32-21z.md
+++ b/2023-07-11t12-32-21z.md
@@ -25,8 +25,38 @@ not simply ignoring the second half, we should notice a large drop in
 performance. If there is no drop in performance, then this is indicative that
 CCLIPT is just ignoring the second half.
 
-Below, we report the results of this investigate
+Below, we report the results of this investigation
 
 <!-- TODO -->
 
-WIP
+Without the ablation (i.e. without removing the second half of the encoder
+inputs (setting that half to 0)), we obtain the following results:
+
+![cclipt no ablation](./images/cclipt_no_ablation.pdf)
+
+```plaintext
+Accuracy@1: 0.238
+Accuracy@3: 0.457
+Accuracy@5: 0.570
+Accuracy@10: 0.773
+Accuracy@20: 0.906
+Accuracy@50: 0.973
+```
+
+With the ablation, we obtain the following results
+
+![cclipt with ablation](./images/cclipt_ablation.pdf)
+
+```plaintext
+Accuracy@1: 0.016
+Accuracy@3: 0.031
+Accuracy@5: 0.047
+Accuracy@10: 0.082
+Accuracy@20: 0.176
+Accuracy@50: 0.363
+```
+
+We notice a large accuracy drop, which indicates that CCLIPT is not simply
+ignoring the second half and memorizing the first half. This is good news, as it
+means that CCLIPT is actually learning to encode the visual and textual
+trajectories in a way that is useful.
