add note about potential flaw with sanity check

--- a/2023-07-11t12-32-21z.md
+++ b/2023-07-11t12-32-21z.md
@@ -27,8 +27,6 @@ CCLIPT is just ignoring the second half.
 
 Below, we report the results of this investigation
 
-<!-- TODO -->
-
 Without the ablation (i.e. without removing the second half of the encoder
 inputs (setting that half to 0)), we obtain the following results:
 
@@ -60,3 +58,12 @@ We notice a large accuracy drop, which indicates that CCLIPT is not simply
 ignoring the second half and memorizing the first half. This is good news, as it
 means that CCLIPT is actually learning to encode the visual and textual
 trajectories in a way that is useful.
+
+Note however, that the results presented here are for a version of CCLIPT was
+trained in two stages, first without the context on the text trajectories (just
+as CLIPT), and then with the context on the text trajectories, but with the
+visual trajectory encoder frozen. Perhaps this first stage of training where the
+current state was entangled with the textual annotation prevented the
+memorization from happening. I wonder if when training from scratch in a single
+stage, the encoders will indeed learn to ignore the second halves, since after
+all they share the first half of their input.
