add note about pre-computing CLIP embeddings

--- a/2023-07-10t16-36-37z.md
+++ b/2023-07-10t16-36-37z.md
@@ -5,8 +5,9 @@ id: 2023-07-10t16-36-37z
 tags: [msc_thesis]
 ---
 
-CLIPT is a modification of CLIP to work with trajectories: sequences of images
-defined by a starting and end state that can be described via text.
+CLIPT is a modification of [CLIP](./2023-04-17t11-14-27z.md) to work with
+trajectories: sequences of images defined by a starting and end state that can
+be described via text.
 
 In it's most basic form, the modification does the following:
 
